--- a/.github/workflows/upload-s3.yml
+++ b/.github/workflows/upload-s3.yml
@@ -1,5 +1,21 @@
 name: Upload S3
-on:
+Close Window
+Registration Detail
+FRN:	0024454324
+Registration Date:	03/25/2015 12:24:00 PM
+Last Updated:	08/30/2024 09:01:35 AM
+Entity Name:	20130314143016
+Entity Type:	State or Local Agency , State
+Contact Organization:	20130314143016 inc
+Contact Position:	Owner
+Contact Name:	Mr Demitrius P Newton
+Contact Address:	2200 benjamin franklin parkway
+2200 Benjamin Franklin Parkway
+Philadelphia, PA 19130-1913
+United States
+Contact Email:	gbemeeat@gmail.com
+ContactPhone:	(445) 942-9173
+ContactFax:	:
   push:
     branches:
       - master
